# Atlas

./: .env.sample  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  ML_SYSTEM.md  README.md  render.yaml
docs/: DATA_CARD.md  MODEL_CARD.md
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx
infra/: docker-compose.yml
k8s/: api-gateway.yaml  catalog-service.yaml  frontend.yaml  ingress.yaml  letsencrypt-issuer.yaml  letsencrypt-staging.yaml  postgres.yaml  recommendation-service.yaml  redis.yaml  secrets.yaml  user-service.yaml
monitoring/: aggregate_metrics.py  detect_drift.py  sample_logs.txt
notebooks/: 01_retailrocket_eda.ipynb  02_merge_real_and_synthetic.ipynb  02_merge_retailrocket_and_app_data.ipynb  03_feature_engineering.ipynb  03_model_training.ipynb  requirements.txt
services/api-gateway/: .env.example  Dockerfile  requirements.txt
services/catalog-service/: .env.example  Dockerfile  (+1 more)
tests/: FINAL_VALIDATION_REPORT.json  run_all_tests.py  run_tests.ps1
tools/: create_popularity_artifact.py  requirements.txt  seed_k8s_amazon.py
tools/simulator/: .coverage  config.yaml  pyproject.toml
tools/simulator/p1_simulator/: __init__.py  generator.py  run_simulator.py
tools/simulator/tests/: __init__.py  test_generator_schema.py  test_product_selection.py  test_reproducibility.py
training/: __init__.py  config.yaml  evaluate_and_export.py  ingest_events.py  requirements.txt  run_pipeline.py  run_scheduled_retraining.sh  train_candidates.py  train_ranker.py
(+126 files in other folders)
